--- a/ZUGFeRD.Render/ZUGFeRD.Render.csproj
+++ b/ZUGFeRD.Render/ZUGFeRD.Render.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="test.cshtml" />
+    <EmbeddedResource Include="Simple.scriban" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="RazorLight" Version="2.3.1" />
+    <PackageReference Include="Scriban" Version="5.12.1" />
   </ItemGroup>
 
   <ItemGroup>
