--- a/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
+++ b/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
@@ -58,8 +58,8 @@ This library allows to load and create PDF/A files.
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontInfo" Version="1.2.0" />
     <PackageReference Include="PDFsharp-extended" Version="1.2.0-preview-1" />
-    <PackageReference Include="SkiaSharp" Version="3.119.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="10.0.0-preview.4.25258.110" />
     <PackageReference Include="ZUGFeRD-csharp" Version="17.3.0" />
   </ItemGroup>
