--- a/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
+++ b/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
@@ -16,8 +16,13 @@
 	<EmbedUntrackedSources>true</EmbedUntrackedSources>
 	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>	
     <RootNamespace>s2industries.ZUGFeRD.PDF</RootNamespace>	
-    <Version>17.3.0</Version>	
-    <PackageReleaseNotes>17.3.0:
+    <Version>17.4.0</Version>	
+    <PackageReleaseNotes>17.4.0
+* Synchronous PDF loading and saving
+* Replaced SkiaSharp towards minimalistic custom font reading
+* Require ZUGFERD-csharp 17.4.0
+
+17.3.0:
 * Require ZUGFeRD-csharp 17.3.0
 
 17.2.1:
@@ -32,7 +37,7 @@
 * fully compliant XMP metadata
 </PackageReleaseNotes>	
     <AssemblyName>s2industries.ZUGFeRD.PDF</AssemblyName>	
-    <AssemblyVersion>17.2.1</AssemblyVersion>	
+    <AssemblyVersion>17.4.0</AssemblyVersion>	
     <Description>ZUGFeRD and it's successor Factur-X/ XRechnung are initiatives from German (respectively European) government to foster electronic invoices.
 It is based on using PDF/A-3 to store invoices along with embedded xml descriptor for easy processing.
 A special favor is the so-called XRechnung which is also supported by this library.
