--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net480;net8.0</TargetFrameworks>
-    <Version>17.3.0</Version>
+    <Version>17.4.0</Version>
     <Authors>Stephan Stapel</Authors>
     <Company>s2 industries</Company>
     <Description>ZUGFeRD and it's successor Factur-X/ XRechnung are initiatives from German (respectively European) government to foster electronic invoices.
@@ -22,15 +22,19 @@ https://github.com/stephanstapel/ZUGFeRD-csharp</Description>
     <PackageProjectUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/</PackageProjectUrl>
     <PackageTags>zugferd xml xrechnung pdf invoice</PackageTags>
     <Copyright>Stephan Stapel, s2 industries, 2025</Copyright>
-    <AssemblyVersion>17.3.0</AssemblyVersion>
+    <AssemblyVersion>17.4.0</AssemblyVersion>
     <AssemblyTrademark>http://www.s2-industries.com</AssemblyTrademark>
-    <FileVersion>17.3.0</FileVersion>
+    <FileVersion>17.4.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <AssemblyName>s2industries.ZUGFeRD</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>ZUGFeRD.snk</AssemblyOriginatorKeyFile>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageReleaseNotes>17.3.0
+    <PackageReleaseNotes>17.4.0
+* Bugfixes
+* Enhanced doumentation
+
+17.3.0
 * Made the enums nullable, removing Unknown enum values
 * Reversed the change so that list properties are accessible again
 * Fixed invoice validation for ZUGFeRDVersion.Version23
