--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net480;net8.0</TargetFrameworks>
-    <Version>18.0.0-rc</Version>
+    <Version>18.0.0-beta1</Version>
     <Authors>Stephan Stapel</Authors>
     <Company>s2 industries</Company>
     <Description>ZUGFeRD and it's successor Factur-X/ XRechnung are initiatives from German (respectively European) government to foster electronic invoices.
@@ -22,9 +22,9 @@ https://github.com/stephanstapel/ZUGFeRD-csharp</Description>
     <PackageProjectUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/</PackageProjectUrl>
     <PackageTags>zugferd xml xrechnung pdf invoice</PackageTags>
     <Copyright>Stephan Stapel, s2 industries, 2025</Copyright>
-    <AssemblyVersion>18.0.0-rc</AssemblyVersion>
+    <AssemblyVersion>18.0.0</AssemblyVersion>
     <AssemblyTrademark>http://www.s2-industries.com</AssemblyTrademark>
-    <FileVersion>18.0.0-rc</FileVersion>
+    <FileVersion>18.0.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <AssemblyName>s2industries.ZUGFeRD</AssemblyName>
     <SignAssembly>true</SignAssembly>
