use stable version of System.Text.Encoding.CodePages

--- a/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
+++ b/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
@@ -77,7 +77,7 @@ A special favor is the so-called XRechnung which is also supported by this libra
 
   <ItemGroup>
     <PackageReference Include="PDFsharp-extended" Version="1.2.0-preview-1" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="10.0.0-preview.5.25277.114" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.9" />
     <PackageReference Include="ZUGFeRD-csharp" Version="18.0.0-beta1" />
   </ItemGroup>
 
